Add edit user and get user profile endpoints
